--- a/ubuntu_24.04/polybar/forest/config.ini
+++ b/ubuntu_24.04/polybar/forest/config.ini
@@ -130,8 +130,12 @@ module-margin-right = 1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Iosevka Nerd Font:size=10;4"
-font-1 = "Iosevka Nerd Font:size=10;3"
+; font-0 = "Iosevka Nerd Font:size=10;4"
+; font-1 = "Iosevka Nerd Font:size=10;3"
+; font-2 = "feather:size=12;3"
+
+font-0 = "Cascadia Code:size=10;4"
+font-1 = "Cascadia Code:size=10;3"
 font-2 = "feather:size=12;3"
 
 ; Modules are added to one of the available blocks
