--- a/ubuntu_24.04/kitty/kitty.conf
+++ b/ubuntu_24.04/kitty/kitty.conf
@@ -20,7 +20,7 @@ window_padding_width 20
 
 # Colors
 
-background #2D2A2E
+background #1E2122
 foreground #f5ebe0 
 
  color1 #ff595e
@@ -45,3 +45,4 @@ color7  #f5ebe0
 #: white
 
 map f1 launch --cwd=current
+
