--- a/ubuntu_24.04/polybar/forest/colors.ini
+++ b/ubuntu_24.04/polybar/forest/colors.ini
@@ -12,7 +12,7 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #282828
+background = #1E2121
 foreground = #EBDBB2
 sep = #505050
 
