--- a/ubuntu_24.04/polybar/forest/config.ini
+++ b/ubuntu_24.04/polybar/forest/config.ini
@@ -71,7 +71,7 @@ offset-x = 10
 offset-y = 7
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
-background = #2D2A2E
+background = #1E2122
 
 ; Foreground ARGB color (e.g. #f00, #ff992a, #ddff1023)
 foreground = ${color.foreground}
