--- a/qtile/dotfiles/kitty/kitty.conf
+++ b/qtile/dotfiles/kitty/kitty.conf
@@ -1,8 +1,8 @@
-font_family     Cascadia Code
-font_size 		13
-bold_font       Cascadia Code
-italic_font      Cascadia Code
-bold_italic_font Cascadia Code PL
+font_family     Liga SFMono Nerd Font
+font_size 		  13
+bold_font       Liga SFMono Nerd Font SemiBold
+italic_font     Liga SFMono Nerd Font Italic
+bold_italic_font Liga SFMono Nerd Font SemiBold Italic
 
 background_opacity 1
 confirm_os_window_close 0
@@ -20,7 +20,7 @@ window_padding_width 15
 # Colors
 
 background #1E2122
-foreground #f5ebe0 
+foreground #d7dbc7 
 
  color1 #ff595e
 #: red
@@ -28,19 +28,19 @@ foreground #f5ebe0
 color2  #74a892
 #: green
 
-color3  #fbf2c4
+color3  #e0c080
 #: yellow
 
-color4  #38638b
+color4  #809bce
 #: blue
 
 color5  #faaac7
 #: magenta
 
-color6  #abc4ff
+color6  #7daea3
 #: cya
 
-color7  #f5ebe0
+color7  #d7dbc7
 #: white
 
 map f1 launch --cwd=current
