--- a/qtile/dotfiles/picom/picom.conf
+++ b/qtile/dotfiles/picom/picom.conf
@@ -325,7 +325,7 @@ detect-client-opacity = true;
 # Specify refresh rate of the screen. If not specified or 0, picom will
 # try detecting this with X RandR extension.
 #
-refresh-rate = 60
+# refresh-rate = 74.97
 # refresh-rate = 0;
 
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
