--- a/qtile/dotfiles/kitty/kitty.conf
+++ b/qtile/dotfiles/kitty/kitty.conf
@@ -4,6 +4,8 @@ bold_font       Liga SFMono Nerd Font SemiBold
 italic_font     Liga SFMono Nerd Font Italic
 bold_italic_font Liga SFMono Nerd Font SemiBold Italic
 
+font_spacing 1.0
+
 background_opacity 1
 confirm_os_window_close 0
 
