--- a/qtile/dotfiles/picom/picom.conf
+++ b/qtile/dotfiles/picom/picom.conf
@@ -18,40 +18,38 @@ transition-pow-w = 0.1
 transition-pow-h = 0.1
 size-transition = true
 
-corner-radius = 8.0;
+corner-radius = 10;
 
 round-borders = 1;
 
 round-borders-exclude = [
 ];
 
-active-opacity = 0.93;
-
+active-opacity = 0.9;
 inactive-opacity-override = true;
-
 inactive-opacity = 0.9;
-
 frame-opacity = 0.9;
-
 popup_menu = { opacity = 0.9; }
-
 dropdown_menu = { opacity = 0.9; }
 
 
 focus-exclude = [
   "class_g = 'zen-alpha'",
   "class_g = 'Bar'",                    # lemonbar
-  "class_g = 'slop'"                    # maim
+  "class_g = 'slop'",                    # maim
+  "class_g = 'mpv'"  
 ];
 
 opacity-rule = [
   # "80:class_g     = 'Bar'",             # lemonbar
+  "100:class_g     = 'mpv'",             # lemonbar
   "95:class_g     = 'zen-alpha'",             # lemonbar
+  "80:class_g     = 'kitty'",             # lemonbar
 ];
 
 blur: {
   method = "dual_kawase";
-  strength = 6;
+  strength = 10;
   background = true;
   background-frame = true;
   background-fixed = true;
